--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ function initialize() {
     <div class="parallax1"></div>
     <div id="piese">
         <div class="titlu">
-            <p>Previewuri Piese</p>
+            <p>Beats Preview</p>
         </div>
         <div class="pi">
         <object>
@@ -90,14 +90,14 @@ function initialize() {
         </div>
   
     <div class="contacts">
+        <p class="bold">CONTACT</p>
         <p class="text"><b>NUME: RAZVAN DIACONESCU</b></p>
-        <p class="text"><b>TELEFON: 07696969</b></p>
-        <p class="text"><b>Email: vevfasdfs@yahoo.com</b></p>
+        <p class="text"><b>EMAIL: reallilcofficial@gmail.com</b></p>
         <ul>
-            <li><a href="#"><img src="icons/facebook.png"></a></li>
-            <li><a href="#"><img src="icons/paypal.png"></a></li>
-            <li><a href="#"><img src="icons/soundcloud.png"></a></li>
-            <li><a href="#"><img src="icons/instagram.png"></a></li>
+            <li><a href="https://www.youtube.com/channel/UCGY6yrWeZWgDqbxFFn4Im8Q"><img src="icons/youtube.png"></a></li>
+            <li><a href="https://www.patreon.com/lilc"><img src="icons/patreon.png"></a></li>
+            <li><a href="https://soundcloud.com/reallilc"><img src="icons/soundcloud.png"></a></li>
+            <li><a href="https://www.instagram.com/lilconthabeat/"><img src="icons/instagram.png"></a></li>
         </ul>
     </div>
       <nav>
